Fix visibility of file list
ERM29005

[4.2.x]

(cherry picked from commit 3d6d32d1147b72609ec198f5b9f61c1ffe698273)

--- a/resources/attachments.css
+++ b/resources/attachments.css
@@ -38,12 +38,12 @@
 	height: auto;
 }
 
-<<<<<<< HEAD   (77f43e Localisation updates from https://translatewiki.net.)
-.attachments-filelist .oojsplus-data-gridWidget-table .oojsplus-data-gridWidget-header td.oojsplus-data-gridWidget-cell {
-=======
+.ve-activated .attachments-filelist > ul {
+	visibility: visible;
+}
+
 /* stylelint-disable declaration-no-important */
-.attachments-filelist .oojsplus-data-gridWidget-table .oojsplus-data-gridWidget-header th.oojsplus-data-gridWidget-cell {
->>>>>>> CHANGE (81644d Fix delete in grid)
+.attachments-filelist .oojsplus-data-gridWidget-table .oojsplus-data-gridWidget-header td.oojsplus-data-gridWidget-cell {
 	border-bottom: 1px solid #a5a5a5;
 	border-right-color: transparent !important;
 }
